# peacetolero_stonefish

./: CMakeLists.txt  package.xml
config/: peacetolero_alpha_force.xml  view.rviz
launch/: description_sim.launch.py  peacetolero_simulation.launch.py
resources/: pipe_edits.blend  pipe_edits.blend1
resources/alpha/: rs1_130_v5.mtl
resources/cirtesu/: payload.mtl  payload_v2.dae  payload_v2.mtl
resources/pipe/: pipe.mtl
scenarios/: cirtesu_tank.scn  pipe.scn  sea.scn  tank.scn
scenarios/robot/: peacetolero.scn  peacetolero_alpha.scn  peacetolero_alpha_sensor.scn
scripts/: cmd_vel_map.py  joint_states_filter.py  odom_to_tf.py  point_cloud_publisher.py  publish_propeller.py  publish_wheels.py  rqt_publish_wheels.py  velocity_req.py  velocity_req_rqt.py
src/: peacetolero_stonefish_node.cpp
